--- a/ubs_smu_mou_demo/ubs_demo/templates/ubs_demo/index.html
+++ b/ubs_smu_mou_demo/ubs_demo/templates/ubs_demo/index.html
@@ -40,7 +40,7 @@
     <div class="container">
         <div class="image-container">
             <img src="{% static 'ubs_demo/background.jpg' %}" alt="My Image" class="img-fluid rounded">
-            <div class="overlay-text">Hello, Shawn!</div>
+            <div class="overlay-text">Hello, Gabriel!</div>
         </div>
         <p class="lead mt-4">Hello!</p>
     </div>
